# gray-scott

./: CMakeLists.txt
analysis/: pdf-calc.cpp
simulation/: writer.cpp
